--- a/src/style.css
+++ b/src/style.css
@@ -5,13 +5,14 @@
 }
 
 :root {
-  --body-background: #DCDCDC;
-  --sidebar-background: #FFFAFA;
+  --body-background: #dcdcdc;
+  --sidebar-background: #fffafa;
 }
 
 html,
 body {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   width: 100%;
   height: 100%;
 }
@@ -36,9 +37,6 @@ body {
 }
 
 .sidebar * {
-    align-self: center;
-    justify-self: center;
+  align-self: center;
+  justify-self: center;
 }
-
-
-
