--- a/src/style.css
+++ b/src/style.css
@@ -33,7 +33,7 @@ body {
 
 .sidebar {
   display: grid;
-  grid-template-rows: repeat(10, 1fr);
+  grid-template-rows: repeat(4, 1fr) 5fr;
   background-color: var(--sidebar-background);
 }
 
@@ -102,4 +102,13 @@ body {
 }
 
 .bar-add {
+  display: grid;
+  width: 100%;
+  height: 100%;
+  grid-template-rows: repeat(10, 1fr);
+}
+
+.bar-add * {
+  align-self: center;
+  justify-self: center;
 }
