--- a/src/style.css
+++ b/src/style.css
@@ -81,24 +81,18 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-around;
+  background-color: var(--body-background);
 }
 
 .add-folder {
+  cursor: pointer;
+  border: 2px solid black;
   background-color: greenyellow;
-  width: 50%;
-  height: 100%;
+  width: 60%;
+  height: 50%;
   display: flex;
   justify-content: center;
   align-items: center;
-}
-
-.delete-folder {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 50%;
-  height: 100%;
-  background-color: red;
 }
 
 .bar-add {
@@ -111,4 +105,10 @@ body {
 .bar-add * {
   align-self: center;
   justify-self: center;
+}
+
+.container-name {
+  width: 50%;
+  display: flex;
+  justify-content: space-around;
 }
