--- a/src/style.css
+++ b/src/style.css
@@ -112,3 +112,89 @@ body {
   display: flex;
   justify-content: space-around;
 }
+
+.menu-folder {
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+}
+
+.warn-folder {
+  font-size: 10px;
+  justify-self: center;
+  color: #900;
+  font-weight: bold;
+  border-radius: 0 0 5px 5px;
+  box-sizing: border-box;
+}
+
+.input-menu {
+  justify-self: center;
+  align-self: center;
+  width: 100%;
+}
+
+.input-container {
+  width: 100%;
+  height: 100%;
+  display: grid;
+}
+
+.control-container {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+}
+
+.add-menu {
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
+  background-color: greenyellow;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50px;
+  border: 2px solid black;
+}
+
+.cancel-menu {
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
+  background-color: red;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50px;
+  border: 2px solid black;
+}
+
+.cancel-menu > svg,
+.add-menu > svg {
+  width: 50%;
+  height: 50%;
+}
+
+.container-name {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.delete-name {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.delete-name > svg {
+  filter: invert(12%) sepia(97%) saturate(6040%) hue-rotate(1deg)
+    brightness(93%) contrast(119%);
+  width: 20px;
+  height: 20px;
+}
+
+/* M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z
+M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>close</title><path d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z" /></svg> */
